--- a/config/locales/devise.views.en.yml
+++ b/config/locales/devise.views.en.yml
@@ -91,8 +91,8 @@ en:
       already_signed_out: Signed out successfully.
       new:
         sign_in: Sign in
-      signed_in:
-      signed_out: 
+      signed_in: "Singied in."
+      signed_out: "Signed out."
     shared:
       links:
         back: Back
